# discord-gpt

./: .pre-commit-config.yaml  Cargo.toml  README.md  test.py
.github/workflows/: build.yml  lint.yml  release.yml
src/: chat.rs  commands.rs  handlers.rs  main.rs  pyparse.rs
