[package]
name = "discord_gpt"
version = "0.1.0"
edition = "2021"


# uncomment the following lines to compile the python docstring parser

# [[bin]]
# name = "pyparse"
# path = "src/pyparse.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.2.3"
dotenv = "0.15.0"
reqwest = "0.12.20"
poise = "0.6.1"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
once_cell = "1.21.3"
